:sparkles: Add endpoint to find a player
