# openapi.yml
@@ -228,6 +228,43 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+  /tournaments/{tournamentId}/players/{playerId}:
+    get:
+      tags:
+        - player
+      summary: Find a player
+      description: Find an existing player of the tournament by ID
+      operationId: findPlayer
+      parameters:
+        - name: tournamentId
+          in: path
+          description: ID of tournament
+          required: true
+          schema:
+            $ref: '#/components/schemas/TournamentId'
+        - name: playerId
+          in: path
+          description: ID of the player
+          required: true
+          schema:
+            $ref: '#/components/schemas/UserId'
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Player'
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: Player not found
+        default:
+          description: Unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
 components:
   schemas:
     TournamentSearchResult:
